# codecortex

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
cli/: cortex_cli.py
codecortex/: agent_instructions.py  agent_operating_model.py  benchmarking.py  django_semantics.py  example_graph.json  feature_graph.py  graph_builder.py  graph_context.py  graph_query.py  graph_status.py  openclaw_integration.py  project_context.py  scanner.py  semantics_store.py
docs/: SEMANTIC_GRAPH_IMPLEMENTATION_PLAN.md  agent-alignment-v1.md  agent-runtime-implementation-plan.md  architecture.md  command-execution-policy-v1.md  execution-benchmark-plan.md  execution-contracts-v1.md  execution-runtime-v1.md  implementation-plan-adr-001-adr-002.md  openclaw-alignment-v1.md  openclaw-bootstrap-flow.md  phase-1-boundaries.md  phase-10-openclaw-alignment.md  phase-11-agent-alignment.md  phase-12-tests.md  phase-13-documentation-alignment.md  phase-14-release-readiness.md  phase-3-contract-decisions.md  phase-4-safe-file-operations.md  phase-5-validation-layer.md  phase-6-logging-layer.md  phase-7-minimal-locking.md  phase-8-command-execution.md  phase-9-cli-integration.md  phase-post-v1-benchmark-notes.md  test-matrix-v1.md  token-efficiency-benchmark-plan.md  usage-examples-v1.md  v1-release-readiness.md  v2-next-steps.md
tests/: test_agent_instructions.py  test_agent_operating_model.py  test_benchmarking.py  test_cli_execution.py  test_cli_init.py  test_cli_remember.py  test_constraint_store.py  test_decision_store.py  test_django_semantics.py  test_execution_command_ops.py  (+19 more)
(+29 files in other folders)
